--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -42,6 +42,7 @@
                 <option>US</option>
                 <option>CA</option>
                 <option>EU</option>
+                <option>DE</option>
               </select>
               <svg class="pointer-events-none absolute right-3 top-0 h-full w-5 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                 <path fill-rule="evenodd" d="M5.23 7.21a.75.75 0 011.06.02L10 11.168l3.71-3.938a.75.75 0 111.08 1.04l-4.25 4.5a.75.75 0 01-1.08 0l-4.25-4.5a.75.75 0 01.02-1.06z" clip-rule="evenodd" />
