--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- Menü Alanı-->
-
+<div *ngIf="showMenuAndFooter">
 <nav class="bg-white border-gray-200 dark:bg-gray-900 dark:border-gray-700">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
@@ -64,7 +64,7 @@
     </div>
   </div>
 </nav>
-
+</div>
 
 
 <router-outlet></router-outlet>
@@ -73,7 +73,7 @@
 
 
 <!-- Footer Alanı -->
-
+<div *ngIf="showMenuAndFooter">
 <footer class="bg-gradient-to-r from-gray-900 via-gray-800 to-gray-900 text-white p-8">
   <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
       <div class="md:flex md:justify-between">
@@ -151,3 +151,4 @@
       </div>
   </div>
 </footer>
+</div>
