--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,3 +17,40 @@
         </div>
     </div>
   </section>
+
+
+  <div class="container mx-auto p-4">
+    <div class="grid grid-cols-1 sm:grid-cols-4 gap-4 p-8">
+      <div *ngFor="let item of tumDuyurular" class="max-w-sm bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 flex flex-col justify-between"> <!-- flex ekledik -->
+        <a href="#">
+          <!-- Resmin boyutunu sabit tutuyoruz -->
+          <img class="w-full h-48 object-cover rounded-t-lg" src="{{item.resim}}" alt="Card image" />
+        </a>
+        <div class="p-5 flex flex-col justify-between flex-grow"> <!-- flex-grow kartın kalan alanını kaplar -->
+          
+          <!-- Tarihi sağa hizalıyoruz -->
+          <p class="text-sm text-gray-500 dark:text-gray-400 text-right">{{item.tarih}}</p>
+          
+          <a href="#">
+            <!-- Başlık ve alt başlık taşmadan gösterilecek -->
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{item.baslik}}</h5>
+          </a>
+          
+          <!-- Yazı 150 karakter ile sınırlandırılıyor ve taşarsa "..." ekleniyor -->
+          <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 overflow-hidden text-ellipsis">
+            {{ item.altbaslik.length > 150 ? (item.altbaslik | slice:0:150) + '...' : item.altbaslik }}
+          </p>
+          
+          <!-- Buton her zaman en altta sabitleniyor -->
+          <div class="mt-auto"> <!-- mt-auto butonu en alta iter -->
+            <a (click)="goToDetail(item.id)" class="inline-flex items-center px-3 py-2 text-sm font-medium text-center text-white bg-blue-700 rounded-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+              Daha fazla
+              <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9" />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
