http put islemi

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -54,3 +54,7 @@
       </div>
     </div>
   </div>
+
+  <button (click)="yeniDuyuru()">Yeni duyuru ekleme</button>
+
+  <button (click)="duyuruGuncelle()">Duyuru Guncelleme</button>
