--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -55,6 +55,7 @@
     </div>
   </div>
 
-  <button (click)="yeniDuyuru()">Yeni duyuru ekleme</button>
+  <button (click)="yeniDuyuru()">Yeni duyuru ekleme</button><br>
 
-  <button (click)="duyuruGuncelle()">Duyuru Guncelleme</button>
+  <button (click)="duyuruGuncelle()">Duyuru Guncelleme</button><br>
+  <button (click)="duyuruSilme()">Veri Silme</button>
