--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
 <div class="container mx-auto p-4">
     <form [formGroup]="form" onsubmit="kaydet()" class="bg-white p-6 rounded shadow-md">
-      <h2 class="text-2xl font-bold mb-4">Form Sayfası</h2>
+      <h2 class="text-2xl font-bold mb-4">Kayıt Sayfası</h2>
       
       <div class="mb-4">
         <label class="block text-sm font-medium text-gray-700">ID</label>
